--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "create-app-react": "^1.0.6",
     "howler": "^2.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,6 +26,10 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "engines": {
+    "node": "^14.14.0",
+    "npm": "^6.14.11"
   },
   "browserslist": {
     "production": [
